--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -856,14 +856,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sum() takes at least 1 positional argument (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m p \u001b[38;5;241m=\u001b[39m N[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m----> 2\u001b[0m p \u001b[38;5;241m=\u001b[39m p \u001b[38;5;241m/\u001b[39m p\u001b[38;5;241m-\u001b[39m\u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m p \n",
+      "\u001b[0;31mTypeError\u001b[0m: sum() takes at least 1 positional argument (0 given)"
+     ]
+    }
+   ],
+   "source": [
+    "p = N[0].float()\n",
+    "p = p / p.sum()\n",
+    "p "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p = N[0].float()\n",
-    "p = p / p-sum()\n",
-    "p "
-   ]
+   "source": []
   }
  ],
  "metadata": {
