--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -883,7 +883,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)"
+   ]
   }
  ],
  "metadata": {
