--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -884,7 +884,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = torch.Generator().manual_seed(2147483647)"
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "itos[ix]"
    ]
   }
  ],
