--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -880,13 +880,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "itos[ix]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "g = torch.Generator().manual_seed(2147483647)\n",
-    "ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
-    "itos[ix]"
+    "p = torch.rand(3, generator=g)\n",
+    "p = p / p.sum() \n",
+    "p "
    ]
   }
  ],
