--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -902,15 +902,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.6064, 0.3033, 0.0903])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "g = torch.Generator().manual_seed(2147483647)\n",
     "p = torch.rand(3, generator=g)\n",
     "p = p / p.sum() \n",
     "p "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
