--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -969,6 +969,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = (N+1).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
