--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -973,7 +973,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P = (N+1).float()"
+    "P = (N+1).float()\n",
+    "P /= P.sum(1, keepdims=True)"
    ]
   },
   {
