--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1062,7 +1062,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    \n",
+    "    out = []\n",
+    "    ix = 0 \n",
+    "    while True:\n",
+    "        p = P[ix] \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
