--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1071,7 +1071,7 @@
     "    ix = 0 \n",
     "    while True:\n",
     "        p = P[ix] \n",
-    "        "
+    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()"
    ]
   }
  ],
