--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1073,7 +1073,8 @@
     "        p = P[ix] \n",
     "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
     "        out.append(itos[ix])\n",
-    "        "
+    "        if ix == 0:\n",
+    "            break "
    ]
   }
  ],
