--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1059,9 +1059,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cexze.\n",
+      "momasurailezitynn.\n",
+      "konimittain.\n",
+      "llayn.\n",
+      "ka.\n"
+     ]
+    }
+   ],
    "source": [
     "g = torch.Generator().manual_seed(2147483647)\n",
     "\n",
@@ -1074,8 +1086,16 @@
     "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
     "        out.append(itos[ix])\n",
     "        if ix == 0:\n",
-    "            break "
+    "            break \n",
+    "    print(''.join(out))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
