--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1095,7 +1095,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# GOAL: maximize likelihood of the data w.r.t. model parameters (statistical modelimg) "
+   ]
   }
  ],
  "metadata": {
