--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1096,7 +1096,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GOAL: maximize likelihood of the data w.r.t. model parameters (statistical modelimg) "
+    "# GOAL: maximize likelihood of the data w.r.t. model parameters (statistical modelimg) \n",
+    "# equivalent to maximizing the log likelihood (because log is monotonic) "
    ]
   }
  ],
