--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1097,7 +1097,8 @@
    "outputs": [],
    "source": [
     "# GOAL: maximize likelihood of the data w.r.t. model parameters (statistical modelimg) \n",
-    "# equivalent to maximizing the log likelihood (because log is monotonic) "
+    "# equivalent to maximizing the log likelihood (because log is monotonic) \n",
+    "# equivalent to minimizing the negative log likelihood "
    ]
   }
  ],
