--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1098,7 +1098,9 @@
    "source": [
     "# GOAL: maximize likelihood of the data w.r.t. model parameters (statistical modelimg) \n",
     "# equivalent to maximizing the log likelihood (because log is monotonic) \n",
-    "# equivalent to minimizing the negative log likelihood "
+    "# equivalent to minimizing the negative log likelihood \n",
+    "# equivalent to minimizing the average negative log likelihood \n",
+    "\n"
    ]
   }
  ],
