--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1100,7 +1100,8 @@
     "# equivalent to maximizing the log likelihood (because log is monotonic) \n",
     "# equivalent to minimizing the negative log likelihood \n",
     "# equivalent to minimizing the average negative log likelihood \n",
-    "\n"
+    "\n",
+    "# log(a*b*c) = log(a) + log(b) + log(c) "
    ]
   }
  ],
