--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1109,7 +1109,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "log_likelihood = 0.0 \n",
+    "n = 0 \n",
+    "\n",
+    "for w in words:\n",
+    "    # for w in [\"andrejq\"]:\n",
+    "    chs = ['.'] + list(w) + ['.'] "
+   ]
   }
  ],
  "metadata": {
