--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1114,8 +1114,11 @@
     "n = 0 \n",
     "\n",
     "for w in words:\n",
-    "    # for w in [\"andrejq\"]:\n",
-    "    chs = ['.'] + list(w) + ['.'] "
+    "# for w in [\"andrejq\"]:\n",
+    "    chs = ['.'] + list(w) + ['.'] \n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]"
    ]
   }
  ],
