--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1120,7 +1120,8 @@
     "        ix1 = stoi[ch1]\n",
     "        ix2 = stoi[ch2]\n",
     "        prob = P[ix1, ix2]\n",
-    "        logprob = torch.log(prob)"
+    "        logprob = torch.log(prob)\n",
+    "        log_likelihood += logprob "
    ]
   }
  ],
