--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1121,7 +1121,8 @@
     "        ix2 = stoi[ch2]\n",
     "        prob = P[ix1, ix2]\n",
     "        logprob = torch.log(prob)\n",
-    "        log_likelihood += logprob "
+    "        log_likelihood += logprob \n",
+    "        n += 1 "
    ]
   }
  ],
