--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1122,7 +1122,8 @@
     "        prob = P[ix1, ix2]\n",
     "        logprob = torch.log(prob)\n",
     "        log_likelihood += logprob \n",
-    "        n += 1 "
+    "        n += 1 \n",
+    "        # print(f'{ch1}{ch2}: {prob:.4f} {logprob:.4f}')"
    ]
   }
  ],
