--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1125,7 +1125,10 @@
     "        n += 1 \n",
     "        # print(f'{ch1}{ch2}: {prob:.4f} {logprob:.4f}')\n",
     "        \n",
-    "print(f'{log_likelihood=}')"
+    "print(f'{log_likelihood=}')\n",
+    "nll = -log_likelihood \n",
+    "print(f'{nll=}')\n",
+    "print(f'{nll/n}')"
    ]
   }
  ],
