--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1106,9 +1106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-559951.5625)\n",
+      "nll=tensor(559951.5625)\n",
+      "nll/n=tensor(2.4544)\n"
+     ]
+    }
+   ],
    "source": [
     "log_likelihood = 0.0 \n",
     "n = 0 \n",
@@ -1130,6 +1140,13 @@
     "print(f'{nll=}')\n",
     "print(f'{nll/n}')  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
