--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1108,7 +1108,17 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-559951.5625)\n",
+      "nll=tensor(559951.5625)\n",
+      "2.4543561935424805\n"
+     ]
+    }
+   ],
    "source": [
     "log_likelihood = 0.0 \n",
     "n = 0 \n",
