--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1146,7 +1146,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create the training set of bigrams (x, y)"
+   ]
   }
  ],
  "metadata": {
