--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1143,12 +1143,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". e\n",
+      "e m\n",
+      "m m\n",
+      "m a\n",
+      "a .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create the training set of bigrams (x, y)\n",
+    "xs, ys = [], [] \n",
+    "\n",
+    "for w in words[:1]:\n",
+    "    chs = ['.'] + list(w) + ['.'] \n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        print(ch1, ch2)\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)\n",
+    "        \n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# create the training set of bigrams (x, y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
