--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1271,7 +1271,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.imshow(xenc)"
+   ]
   }
  ],
  "metadata": {
