--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1301,7 +1301,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xenc.dtype"
+   ]
   }
  ],
  "metadata": {
