--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1321,7 +1321,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "W = torch.randn((27, 1))"
+   ]
   }
  ],
  "metadata": {
