--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1322,7 +1322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = torch.randn((27, 1))"
+    "W = torch.randn((27, 1))\n",
+    "xenc @ W "
    ]
   }
  ],
