--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1318,12 +1318,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.0657],\n",
+       "        [ 0.9010],\n",
+       "        [ 1.9748],\n",
+       "        [ 1.9748],\n",
+       "        [-0.3706]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W = torch.randn((27, 1))\n",
+    "xenc @ W "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = torch.randn((27, 1))\n",
-    "xenc @ W "
+    "logits = xenc @ W # log-counts "
    ]
   }
  ],
