--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1347,7 +1347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logits = xenc @ W # log-counts "
+    "logits = xenc @ W # log-counts \n",
+    "counts = logits.exp() # equivalent N "
    ]
   }
  ],
