--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1348,7 +1348,9 @@
    "outputs": [],
    "source": [
     "logits = xenc @ W # log-counts \n",
-    "counts = logits.exp() # equivalent N "
+    "counts = logits.exp() # equivalent N \n",
+    "probs = counts / counts.sum(1, keepdim=True)\n",
+    "probs "
    ]
   }
  ],
