--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1343,15 +1343,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logits = xenc @ W # log-counts \n",
     "counts = logits.exp() # equivalent N \n",
     "probs = counts / counts.sum(1, keepdim=True)\n",
     "probs "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
