--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1162,7 +1162,7 @@
     "# create the training set of bigrams (x, y)\n",
     "xs, ys = [], [] \n",
     "\n",
-    "for w in words[:1]:\n",
+    "for w in words:\n",
     "    chs = ['.'] + list(w) + ['.'] \n",
     "    for ch1, ch2 in zip(chs, chs[1:]):\n",
     "        ix1 = stoi[ch1]\n",
