--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1165,16 +1165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0,  5, 13, 13,  1])"
+       "tensor([ 0,  5, 13,  ..., 25, 26, 24])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
