--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1185,16 +1185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 5, 13, 13,  1,  0])"
+       "tensor([ 5, 13, 13,  ..., 26, 24,  0])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
