--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1205,25 +1205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+       "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 1.],\n",
+       "        [0., 0., 0.,  ..., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
