--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1165,22 +1165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0,  5, 13,  ..., 25, 26, 24])"
+       "torch.Size([228146])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xs"
+    "xs.shape"
    ]
   },
   {
