--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1306,6 +1306,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 27])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xenc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
