--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1326,23 +1326,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "mat1 and mat2 shapes cannot be multiplied (27x1 and 5x27)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m W \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn((\u001b[38;5;241m27\u001b[39m, \u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m \u001b[43mW\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mxenc\u001b[49m \n",
-      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (27x1 and 5x27)"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.4767e-01,  1.0861e+00, -4.5959e-01,  4.1360e-01,  3.3612e-01,\n",
+       "         -1.6192e-01, -4.0386e-01,  6.3011e-01,  7.4951e-01,  2.1889e-01,\n",
+       "         -7.9193e-01, -1.7096e+00, -5.1113e-01,  4.1032e-01,  2.0146e+00,\n",
+       "          1.2747e+00, -4.6816e-01, -8.8958e-02, -3.0408e-01, -1.4643e+00,\n",
+       "          7.9284e-01, -3.0921e-01, -8.1786e-01, -1.8605e+00, -2.5796e+00,\n",
+       "         -5.9976e-01, -3.4070e-01],\n",
+       "        [-1.1752e+00,  1.1316e-01,  5.8074e-01,  2.1688e-01, -9.7146e-01,\n",
+       "         -1.4933e-02, -2.4246e-01, -6.6046e-01,  1.4972e+00,  1.1536e+00,\n",
+       "          8.2754e-01, -1.4978e-03,  2.7875e+00, -1.2656e+00,  6.7572e-01,\n",
+       "         -2.5777e+00,  1.9073e-01,  2.1748e-01,  1.2139e+00,  1.2275e+00,\n",
+       "          9.6631e-01,  1.6822e+00,  1.9625e-02,  1.0625e+00, -4.6288e-01,\n",
+       "          2.2056e+00, -9.2187e-01],\n",
+       "        [ 3.8388e-01,  1.2995e+00,  3.6337e-01,  1.2696e+00,  1.2676e+00,\n",
+       "         -8.7067e-01, -3.6977e-01, -7.6301e-01, -6.8471e-01,  1.0988e+00,\n",
+       "          5.2043e-01,  5.6117e-01, -3.5345e-01, -1.5833e+00, -1.8803e-02,\n",
+       "         -9.2286e-01,  6.9296e-02,  2.8040e+00,  1.3344e+00, -1.1324e+00,\n",
+       "         -4.6827e-01,  6.7771e-01,  1.0070e+00, -5.5525e-01, -1.0288e-01,\n",
+       "         -1.8656e+00, -1.2717e+00],\n",
+       "        [ 3.8388e-01,  1.2995e+00,  3.6337e-01,  1.2696e+00,  1.2676e+00,\n",
+       "         -8.7067e-01, -3.6977e-01, -7.6301e-01, -6.8471e-01,  1.0988e+00,\n",
+       "          5.2043e-01,  5.6117e-01, -3.5345e-01, -1.5833e+00, -1.8803e-02,\n",
+       "         -9.2286e-01,  6.9296e-02,  2.8040e+00,  1.3344e+00, -1.1324e+00,\n",
+       "         -4.6827e-01,  6.7771e-01,  1.0070e+00, -5.5525e-01, -1.0288e-01,\n",
+       "         -1.8656e+00, -1.2717e+00],\n",
+       "        [ 7.7767e-01, -1.0833e+00,  1.4272e+00, -5.9187e-01, -7.1639e-01,\n",
+       "          6.7726e-01, -5.3431e-02, -4.9676e-01, -4.0846e-01, -4.7841e-01,\n",
+       "          1.2416e-02,  7.0886e-01,  8.1608e-02, -1.6383e+00, -2.4108e-01,\n",
+       "         -9.8680e-01,  8.9661e-01,  4.1082e-01,  1.2409e+00, -3.5740e-01,\n",
+       "          2.8237e-02, -3.5537e-02, -8.9296e-01,  9.6205e-01, -6.0609e-01,\n",
+       "         -5.5344e-01, -2.1581e+00]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "W = torch.randn((27, 1))\n",
+    "W = torch.randn((27, 27))\n",
     "xenc @ W "
    ]
   },
