--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1376,20 +1376,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.],\n",
-       "        [1.],\n",
-       "        [1.],\n",
-       "        [1.],\n",
-       "        [1.]])"
+       "tensor([[0.0325, 0.0832, 0.0177, 0.0424, 0.0393, 0.0239, 0.0187, 0.0527, 0.0594,\n",
+       "         0.0349, 0.0127, 0.0051, 0.0168, 0.0423, 0.2105, 0.1004, 0.0176, 0.0257,\n",
+       "         0.0207, 0.0065, 0.0620, 0.0206, 0.0124, 0.0044, 0.0021, 0.0154, 0.0200],\n",
+       "        [0.0045, 0.0165, 0.0263, 0.0183, 0.0056, 0.0145, 0.0116, 0.0076, 0.0659,\n",
+       "         0.0467, 0.0337, 0.0147, 0.2393, 0.0042, 0.0290, 0.0011, 0.0178, 0.0183,\n",
+       "         0.0496, 0.0503, 0.0387, 0.0792, 0.0150, 0.0426, 0.0093, 0.1337, 0.0059],\n",
+       "        [0.0275, 0.0686, 0.0269, 0.0666, 0.0665, 0.0078, 0.0129, 0.0087, 0.0094,\n",
+       "         0.0562, 0.0315, 0.0328, 0.0131, 0.0038, 0.0184, 0.0074, 0.0201, 0.3090,\n",
+       "         0.0711, 0.0060, 0.0117, 0.0369, 0.0512, 0.0107, 0.0169, 0.0029, 0.0052],\n",
+       "        [0.0275, 0.0686, 0.0269, 0.0666, 0.0665, 0.0078, 0.0129, 0.0087, 0.0094,\n",
+       "         0.0562, 0.0315, 0.0328, 0.0131, 0.0038, 0.0184, 0.0074, 0.0201, 0.3090,\n",
+       "         0.0711, 0.0060, 0.0117, 0.0369, 0.0512, 0.0107, 0.0169, 0.0029, 0.0052],\n",
+       "        [0.0672, 0.0105, 0.1287, 0.0171, 0.0151, 0.0608, 0.0293, 0.0188, 0.0205,\n",
+       "         0.0191, 0.0313, 0.0627, 0.0335, 0.0060, 0.0243, 0.0115, 0.0757, 0.0466,\n",
+       "         0.1068, 0.0216, 0.0318, 0.0298, 0.0126, 0.0808, 0.0168, 0.0178, 0.0036]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
