--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1413,16 +1413,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.])"
+       "tensor([0.0325, 0.0832, 0.0177, 0.0424, 0.0393, 0.0239, 0.0187, 0.0527, 0.0594,\n",
+       "        0.0349, 0.0127, 0.0051, 0.0168, 0.0423, 0.2105, 0.1004, 0.0176, 0.0257,\n",
+       "        0.0207, 0.0065, 0.0620, 0.0206, 0.0124, 0.0044, 0.0021, 0.0154, 0.0200])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
