--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1458,7 +1458,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "probs[0].sum()"
+   ]
   }
  ],
  "metadata": {
