--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1536,7 +1536,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# randomly initialize 27 neurons' weights... each neuron receives 27 inputs "
+   ]
   }
  ],
  "metadata": {
