--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1537,7 +1537,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# randomly initialize 27 neurons' weights... each neuron receives 27 inputs "
+    "# randomly initialize 27 neurons' weights... each neuron receives 27 inputs \n",
+    "g = torch.Generator().manual_seed()"
    ]
   }
  ],
