--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1538,7 +1538,7 @@
    "outputs": [],
    "source": [
     "# randomly initialize 27 neurons' weights... each neuron receives 27 inputs \n",
-    "g = torch.Generator().manual_seed()"
+    "g = torch.Generator().manual_seed(2147483647)"
    ]
   }
  ],
