--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1547,7 +1547,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xenc = F.one_hot(xs, num_classes=27).float() # "
+   ]
   }
  ],
  "metadata": {
