--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1548,7 +1548,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xenc = F.one_hot(xs, num_classes=27).float() # "
+    "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
+    "logits = xenc @ W # predict log-counts "
    ]
   }
  ],
