--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1549,7 +1549,8 @@
    "outputs": [],
    "source": [
     "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
-    "logits = xenc @ W # predict log-counts "
+    "logits = xenc @ W # predict log-counts \n",
+    "counts = logits.exp() # counts, equivalent to N "
    ]
   }
  ],
