--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1551,7 +1551,8 @@
     "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
     "logits = xenc @ W # predict log-counts \n",
     "counts = logits.exp() # counts, equivalent to N \n",
-    "probs = counts / counts.sum(1, keepdims=True) # probabilities for next character "
+    "probs = counts / counts.sum(1, keepdims=True) # probabilities for next character \n",
+    "# btw: the last 2 lines here are together called a 'softmax' "
    ]
   }
  ],
