--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1560,7 +1560,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "probs.shape "
+   ]
   }
  ],
  "metadata": {
