--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1580,7 +1580,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nulls = torch.zeros(5)"
+   ]
   }
  ],
  "metadata": {
