--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1581,7 +1581,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nulls = torch.zeros(5)"
+    "nulls = torch.zeros(5)\n",
+    "for i in range(5):\n",
+    "    # i-th bigram: \n",
+    "    x = xs[i].item() # input character index \n",
+    "    y = ys[i].item() # label character index "
    ]
   }
  ],
