--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1585,7 +1585,8 @@
     "for i in range(5):\n",
     "    # i-th bigram: \n",
     "    x = xs[i].item() # input character index \n",
-    "    y = ys[i].item() # label character index "
+    "    y = ys[i].item() # label character index \n",
+    "    print('--------')"
    ]
   }
  ],
