--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1586,7 +1586,8 @@
     "    # i-th bigram: \n",
     "    x = xs[i].item() # input character index \n",
     "    y = ys[i].item() # label character index \n",
-    "    print('--------')"
+    "    print('--------')\n",
+    "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')"
    ]
   }
  ],
