--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1587,7 +1587,8 @@
     "    x = xs[i].item() # input character index \n",
     "    y = ys[i].item() # label character index \n",
     "    print('--------')\n",
-    "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')"
+    "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
+    "    print('inmput to the neural net:', x)"
    ]
   }
  ],
