--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1588,7 +1588,8 @@
     "    y = ys[i].item() # label character index \n",
     "    print('--------')\n",
     "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
-    "    print('inmput to the neural net:', x)"
+    "    print('inmput to the neural net:', x)\n",
+    "    print('output probabilities from the neural net:', probs[i])"
    ]
   }
  ],
