--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1589,7 +1589,9 @@
     "    print('--------')\n",
     "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
     "    print('input to the neural net:', x)\n",
-    "    print('output probabilities from the neural net:', probs[i])"
+    "    print('output probabilities from the neural net:', probs[i])\n",
+    "    print('label (actual next character):', y)\n",
+    "    p = probs[i, y]"
    ]
   }
  ],
