--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1591,7 +1591,8 @@
     "    print('input to the neural net:', x)\n",
     "    print('output probabilities from the neural net:', probs[i])\n",
     "    print('label (actual next character):', y)\n",
-    "    p = probs[i, y]"
+    "    p = probs[i, y]\n",
+    "    print('probabilities assigned by the net to the correct character:', p.item())"
    ]
   }
  ],
