--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1592,7 +1592,8 @@
     "    print('output probabilities from the neural net:', probs[i])\n",
     "    print('label (actual next character):', y)\n",
     "    p = probs[i, y]\n",
-    "    print('probabilities assigned by the net to the correct character:', p.item())"
+    "    print('probabilities assigned by the net to the correct character:', p.item())\n",
+    "    logp = torch.log(p)"
    ]
   }
  ],
