--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1593,7 +1593,9 @@
     "    print('label (actual next character):', y)\n",
     "    p = probs[i, y]\n",
     "    print('probabilities assigned by the net to the correct character:', p.item())\n",
-    "    logp = torch.log(p)"
+    "    logp = torch.log(p)\n",
+    "    print('log likelihood:', logp.item())\n",
+    "    null = -logp "
    ]
   }
  ],
