--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1595,7 +1595,8 @@
     "    print('probabilities assigned by the net to the correct character:', p.item())\n",
     "    logp = torch.log(p)\n",
     "    print('log likelihood:', logp.item())\n",
-    "    null = -logp "
+    "    nll = -logp \n",
+    "    print('negative log likelihood:', nll.item())"
    ]
   }
  ],
