--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1596,7 +1596,8 @@
     "    logp = torch.log(p)\n",
     "    print('log likelihood:', logp.item())\n",
     "    nll = -logp \n",
-    "    print('negative log likelihood:', nll.item())"
+    "    print('negative log likelihood:', nll.item())\n",
+    "    nlls[i] = nll "
    ]
   }
  ],
