--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1597,7 +1597,10 @@
     "    print('log likelihood:', logp.item())\n",
     "    nll = -logp \n",
     "    print('negative log likelihood:', nll.item())\n",
-    "    nlls[i] = nll "
+    "    nlls[i] = nll \n",
+    "    \n",
+    "print('=========')\n",
+    "print('Average negative log likelihood, i.e. loss =', nlls.mean().item())"
    ]
   }
  ],
