--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1667,7 +1667,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ------------- !!! OPTIMIZATION !!! yay ----------- "
+   ]
   }
  ],
  "metadata": {
