--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1716,7 +1716,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# randomly initialize 27 neurons' weights... each neuron receives 27 inputs \n",
+    "g = torch.Generator().manual_seed(2147483647)"
+   ]
   }
  ],
  "metadata": {
