--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1727,7 +1727,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# forward pass "
+   ]
   }
  ],
  "metadata": {
