--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1728,7 +1728,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# forward pass "
+    "# forward pass \n",
+    "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding "
    ]
   }
  ],
