--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1731,7 +1731,7 @@
     "# forward pass \n",
     "xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
     "logits = xenc @ W # predict log-counts \n",
-    "counts = logits.exp() \n",
+    "counts = logits.exp() # counts, equivalent to N \n",
     "probs = counts / counts.sum(1, keepdim=True)"
    ]
   }
