--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1741,7 +1741,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(loss.item())"
+   ]
   }
  ],
  "metadata": {
