--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1759,7 +1759,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# backward pass "
+    "# backward pass \n",
+    "W.grad = None # set to zero the gradient "
    ]
   }
  ],
