--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1760,7 +1760,8 @@
    "outputs": [],
    "source": [
     "# backward pass \n",
-    "W.grad = None # set to zero the gradient "
+    "W.grad = None # set to zero the gradient \n",
+    "loss.backward()"
    ]
   }
  ],
