--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1769,7 +1769,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "W.data += -0.1 * W.grad "
+   ]
   }
  ],
  "metadata": {
