--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1778,7 +1778,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -------- !!! OPTIMIZATION !!! yay, but this time actually ---------- "
+   ]
   }
  ],
  "metadata": {
