--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1787,7 +1787,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create the dataset \n",
+    "xs, ys = [], []\n",
+    "for w in words:\n",
+    "    chs = ['.'] + list(w) + ['.']"
+   ]
   }
  ],
  "metadata": {
