--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1791,7 +1791,10 @@
     "# create the dataset \n",
     "xs, ys = [], []\n",
     "for w in words:\n",
-    "    chs = ['.'] + list(w) + ['.']"
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]"
    ]
   }
  ],
