--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1794,7 +1794,9 @@
     "    chs = ['.'] + list(w) + ['.']\n",
     "    for ch1, ch2 in zip(chs, chs[1:]):\n",
     "        ix1 = stoi[ch1]\n",
-    "        ix2 = stoi[ch2]"
+    "        ix2 = stoi[ch2]\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)"
    ]
   }
  ],
