--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1796,7 +1796,9 @@
     "        ix1 = stoi[ch1]\n",
     "        ix2 = stoi[ch2]\n",
     "        xs.append(ix1)\n",
-    "        ys.append(ix2)"
+    "        ys.append(ix2)\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)"
    ]
   }
  ],
