--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1798,7 +1798,9 @@
     "        xs.append(ix1)\n",
     "        ys.append(ix2)\n",
     "xs = torch.tensor(xs)\n",
-    "ys = torch.tensor(ys)"
+    "ys = torch.tensor(ys)\n",
+    "num = xs.nelement()\n",
+    "print('number of examples: ', num)"
    ]
   }
  ],
