--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1800,7 +1800,10 @@
     "xs = torch.tensor(xs)\n",
     "ys = torch.tensor(ys)\n",
     "num = xs.nelement()\n",
-    "print('number of examples: ', num)"
+    "print('number of examples: ', num)\n",
+    "\n",
+    "# initialize the 'network' \n",
+    "g = torch.Generator().manual_seed(2147483647)"
    ]
   }
  ],
