--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1803,7 +1803,8 @@
     "print('number of examples: ', num)\n",
     "\n",
     "# initialize the 'network' \n",
-    "g = torch.Generator().manual_seed(2147483647)"
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
    ]
   }
  ],
