--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1784,9 +1784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of examples:  228146\n"
+     ]
+    }
+   ],
    "source": [
     "# create the dataset \n",
     "xs, ys = [], []\n",
@@ -1806,6 +1814,13 @@
     "g = torch.Generator().manual_seed(2147483647)\n",
     "W = torch.randn((27, 27), generator=g, requires_grad=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
