--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1820,7 +1820,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# gradient descent \n",
+    "for k in range(1):\n",
+    "    \n",
+    "    # forward pass \n",
+    "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding "
+   ]
   }
  ],
  "metadata": {
