--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1825,7 +1825,8 @@
     "for k in range(1):\n",
     "    \n",
     "    # forward pass \n",
-    "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding "
+    "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
+    "    logits = xenc @ W # predict log-counts "
    ]
   }
  ],
