--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1826,7 +1826,9 @@
     "    \n",
     "    # forward pass \n",
     "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
-    "    logits = xenc @ W # predict log-counts "
+    "    logits = xenc @ W # predict log-counts \n",
+    "    counts = logits.exp() # counts, equivalent to N \n",
+    "    probs = counts / counts.sum(1, keepdim=True) # Probabilities for next character "
    ]
   }
  ],
