--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1828,7 +1828,8 @@
     "    xenc = F.one_hot(xs, num_classes=27).float() # input to the network: one-hot encoding \n",
     "    logits = xenc @ W # predict log-counts \n",
     "    counts = logits.exp() # counts, equivalent to N \n",
-    "    probs = counts / counts.sum(1, keepdim=True) # Probabilities for next character "
+    "    probs = counts / counts.sum(1, keepdim=True) # Probabilities for next character \n",
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()"
    ]
   }
  ],
