--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1829,7 +1829,8 @@
     "    logits = xenc @ W # predict log-counts \n",
     "    counts = logits.exp() # counts, equivalent to N \n",
     "    probs = counts / counts.sum(1, keepdim=True) # Probabilities for next character \n",
-    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()"
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()\n",
+    "    print(loss.item())"
    ]
   }
  ],
