--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1830,7 +1830,10 @@
     "    counts = logits.exp() # counts, equivalent to N \n",
     "    probs = counts / counts.sum(1, keepdim=True) # Probabilities for next character \n",
     "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()\n",
-    "    print(loss.item())"
+    "    print(loss.item())\n",
+    "    \n",
+    "    # backward pass \n",
+    "    W.grad = None # set to zero the gradient "
    ]
   }
  ],
