--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1833,7 +1833,11 @@
     "    print(loss.item())\n",
     "    \n",
     "    # backward pass \n",
-    "    W.grad = None # set to zero the gradient "
+    "    W.grad = None # set to zero the gradient \n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # update \n",
+    "    W.data += -50 * W.grad "
    ]
   }
  ],
