--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1853,7 +1853,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# finally, sample from the 'neural net' model "
+   ]
   }
  ],
  "metadata": {
