--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1854,7 +1854,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# finally, sample from the 'neural net' model "
+    "# finally, sample from the 'neural net' model \n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    \n",
+    "    out = []\n",
+    "    ix = 0 \n",
+    "    while True:\n",
+    "        \n",
+    "        # ----------\n",
+    "        # Before:\n",
+    "        #p = P[ix]\n",
+    "        # -----------\n",
+    "        # NOW: "
    ]
   }
  ],
