--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1867,7 +1867,8 @@
     "        # Before:\n",
     "        #p = P[ix]\n",
     "        # -----------\n",
-    "        # NOW: "
+    "        # NOW: \n",
+    "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()"
    ]
   }
  ],
