--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1868,7 +1868,9 @@
     "        #p = P[ix]\n",
     "        # -----------\n",
     "        # NOW: \n",
-    "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()"
+    "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
+    "        logits = xenc @ W # predict log-counts \n",
+    "        counts = logits.exp()"
    ]
   }
  ],
