--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1870,7 +1870,8 @@
     "        # NOW: \n",
     "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
     "        logits = xenc @ W # predict log-counts \n",
-    "        counts = logits.exp()"
+    "        counts = logits.exp() # counts, equivalent to N \n",
+    "        p = counts / counts.sum(1, keepdim=True) # probabilities for next character "
    ]
   }
  ],
