--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1871,7 +1871,13 @@
     "        xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
     "        logits = xenc @ W # predict log-counts \n",
     "        counts = logits.exp() # counts, equivalent to N \n",
-    "        p = counts / counts.sum(1, keepdim=True) # probabilities for next character "
+    "        p = counts / counts.sum(1, keepdim=True) # probabilities for next character \n",
+    "        # -----------\n",
+    "        \n",
+    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[ix])\n",
+    "        if ix == 0:\n",
+    "            break "
    ]
   }
  ],
