--- a/bigram_LM.ipynb
+++ b/bigram_LM.ipynb
@@ -1877,7 +1877,8 @@
     "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
     "        out.append(itos[ix])\n",
     "        if ix == 0:\n",
-    "            break "
+    "            break \n",
+    "    print(''.join(out))"
    ]
   }
  ],
