--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -5,6 +5,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F \n",
+    "import matplotlib.pyplot as plt # for making figures \n",
+    "%matplotlib inline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
