--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -17,7 +17,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read in all the words \n",
+    "words = open('names.txt', 'r').read().splitlines()\n",
+    "words[:8]"
+   ]
   }
  ],
  "metadata": {
