--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -60,7 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# build the vocabulary of characters and mappings to/from integers \n"
+    "# build the vocabulary of characters and mappings to/from integers \n",
+    "chars = sorted(list(set(''.join(words))))\n",
+    "stoi = {s:i+1 for i,s in enumerate(chars)}"
    ]
   }
  ],
