--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -62,7 +62,10 @@
    "source": [
     "# build the vocabulary of characters and mappings to/from integers \n",
     "chars = sorted(list(set(''.join(words))))\n",
-    "stoi = {s:i+1 for i,s in enumerate(chars)}"
+    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
+    "stoi['.'] = 0 \n",
+    "itos = {i:s for s,i in stoi.items()}\n",
+    "print(itos)"
    ]
   }
  ],
