--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -81,7 +81,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# build the dataset \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
