--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -83,7 +83,9 @@
    "outputs": [],
    "source": [
     "# build the dataset \n",
-    "\n"
+    "\n",
+    "block_size = 3 # context length: how many characters do we take to predict the next one? \n",
+    "X, Y = [], [] \n"
    ]
   }
  ],
