--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -85,7 +85,12 @@
     "# build the dataset \n",
     "\n",
     "block_size = 3 # context length: how many characters do we take to predict the next one? \n",
-    "X, Y = [], [] \n"
+    "X, Y = [], [] \n",
+    "for w in words:\n",
+    "    \n",
+    "    # print(w)\n",
+    "    context = [0] * block_size \n",
+    "    "
    ]
   }
  ],
