--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -90,7 +90,8 @@
     "    \n",
     "    # print(w)\n",
     "    context = [0] * block_size \n",
-    "    "
+    "    for ch in w + '.':\n",
+    "        ix = stoi[ch]"
    ]
   }
  ],
