--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -91,7 +91,8 @@
     "    # print(w)\n",
     "    context = [0] * block_size \n",
     "    for ch in w + '.':\n",
-    "        ix = stoi[ch]"
+    "        ix = stoi[ch] \n",
+    "        X.append(context)"
    ]
   }
  ],
