--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -92,7 +92,9 @@
     "    context = [0] * block_size \n",
     "    for ch in w + '.':\n",
     "        ix = stoi[ch] \n",
-    "        X.append(context)"
+    "        X.append(context)\n",
+    "        Y.append(ix)\n",
+    "        "
    ]
   }
  ],
