--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -94,7 +94,7 @@
     "        ix = stoi[ch] \n",
     "        X.append(context)\n",
     "        Y.append(ix)\n",
-    "        "
+    "        # print(''.join(itos[i] for i in context), '---->', itos[ix])"
    ]
   }
  ],
