--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -106,7 +106,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X.shape, X.dtype, Y.shape, Y.dtype "
+   ]
   }
  ],
  "metadata": {
