--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -103,11 +103,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([228146, 3]), torch.int64, torch.Size([228146]), torch.int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, X.dtype, Y.shape, Y.dtype "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.shape, X.dtype, Y.shape, Y.dtype "
+    "# build the dataset \n",
+    "\n",
+    "block_size = 3 # context length: how many characters do we take to predict the next one ? "
    ]
   }
  ],
