--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -129,7 +129,16 @@
    "source": [
     "# build the dataset \n",
     "\n",
-    "block_size = 3 # context length: how many characters do we take to predict the next one ? "
+    "block_size = 3 # context length: how many characters do we take to predict the next one ? \n",
+    "\n",
+    "def build_dataset(words):\n",
+    "    X, Y = [], [] \n",
+    "    for w in words: \n",
+    "        \n",
+    "        # print(w)\n",
+    "        context = [0] * block_size \n",
+    "        for ch in w + '.':\n",
+    "            ix = stoi[ch]"
    ]
   }
  ],
