--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -138,7 +138,10 @@
     "        # print(w)\n",
     "        context = [0] * block_size \n",
     "        for ch in w + '.':\n",
-    "            ix = stoi[ch]"
+    "            ix = stoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            # print(''.join(itos[i] for i in context), '--->', itos[ix])"
    ]
   }
  ],
