--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -141,7 +141,8 @@
     "            ix = stoi[ch]\n",
     "            X.append(context)\n",
     "            Y.append(ix)\n",
-    "            # print(''.join(itos[i] for i in context), '--->', itos[ix])"
+    "            # print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
+    "            context = context[1:] + [ix] # crop and append "
    ]
   }
  ],
