--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -142,7 +142,10 @@
     "            X.append(context)\n",
     "            Y.append(ix)\n",
     "            # print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
-    "            context = context[1:] + [ix] # crop and append "
+    "            context = context[1:] + [ix] # crop and append \n",
+    "            \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)"
    ]
   }
  ],
