--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -145,7 +145,9 @@
     "            context = context[1:] + [ix] # crop and append \n",
     "            \n",
     "    X = torch.tensor(X)\n",
-    "    Y = torch.tensor(Y)"
+    "    Y = torch.tensor(Y)\n",
+    "    print(X.shape, Y.shape)\n",
+    "    return X, Y "
    ]
   }
  ],
