--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -147,7 +147,11 @@
     "    X = torch.tensor(X)\n",
     "    Y = torch.tensor(Y)\n",
     "    print(X.shape, Y.shape)\n",
-    "    return X, Y "
+    "    return X, Y \n",
+    "\n",
+    "import random \n",
+    "random.seed(42)\n",
+    "random.shuffle(words)"
    ]
   }
  ],
